# Nexus

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  specs.md  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  openai.rs
src/components/agents/: AgentsView.tsx  SpawnAgentForm.tsx
src/components/chat/: ChatView.tsx  MessageInput.tsx  MessageList.tsx  ModelSelector.tsx
src/components/editor/: EditorTabs.tsx  EditorView.tsx  FileTree.tsx  MonacoEditor.tsx
src/components/layout/: CommandPalette.tsx  Sidebar.tsx  StatusBar.tsx
src/components/mcp/: McpView.tsx
src/components/memory/: MemoryView.tsx
src/components/plugins/: PluginsView.tsx
src/components/settings/: SettingsView.tsx
src/components/terminal/: TerminalInstance.tsx  TerminalView.tsx
src/stores/: agentStore.ts  appStore.ts  chatStore.ts  editorStore.ts  mcpStore.ts  memoryStore.ts  pluginStore.ts  terminalStore.ts
src/styles/: globals.css
