[package]
name = "nexus"
version = "0.1.0"
description = "Your personal AI coding cockpit"
authors = ["Daymrens"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["rustls", "json", "stream"] }
futures-util = "0.3.33"
portable-pty = "0.9.0"
keyring = "4.1.5"
